kubernetes/kustomizations/reddit-meaningofwords/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reddit-meaningofwords
  labels:
    app: reddit-meaningofwords
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reddit-meaningofwords
  template:
    metadata:
      labels:
        app: reddit-meaningofwords
    spec:
      imagePullSecrets:
        - name: dockerhub-image-pull-secret
      containers:
        - name: reddit-bot
          image: theadzik/meaningofwords:2025.06.2
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /tmp
              name: temp
            - mountPath: /home/nonroot/nltk_data
              name: nltk-data
            - mountPath: "/reddit"
              name: config-volume
            - mountPath: /database
              name: database
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsUser: 10005
            runAsGroup: 20005
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - "cat /tmp/liveness && rm /tmp/liveness"
            initialDelaySeconds: 600
            periodSeconds: 300
            failureThreshold: 6
            successThreshold: 1
          resources:
            requests:
              memory: "96Mi"
              cpu: "20m"
      securityContext:
        runAsUser: 10005
        runAsGroup: 20005
        fsGroup: 20005
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: temp
          emptyDir: {}
        - name: nltk-data
          emptyDir: {}
        - name: config-volume
          configMap:
            name: bot-files
        - name: database
          persistentVolumeClaim:
            claimName: database-bot

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bullying-detector
  labels:
    app: bullying-detector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bullying-detector
  template:
    metadata:
      labels:
        app: bullying-detector
    spec:
      imagePullSecrets:
        - name: dockerhub-image-pull-secret
      containers:
        - name: model
          image: theadzik/bullying-detector:2025.06.2
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /readyz
              port: http-port
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /alivez
              port: http-port
            periodSeconds: 120
            initialDelaySeconds: 90
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 2
          ports:
            - containerPort: 8080
              protocol: "TCP"
              name: http-port
          securityContext:
            readOnlyRootFilesystem: false # transformers throw circular import with RO FS
            allowPrivilegeEscalation: false
            runAsUser: 10009
            runAsGroup: 20009
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: "768Mi"
              cpu: "20m"
          volumeMounts:
            - mountPath: /.cache
              name: cache
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: cache
          emptyDir: {}
