kubernetes/kustomizations/reddit-meaningofwords/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bullying-detector
  name: bullying-detector
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: bullying-detector
  type: ClusterIP
